myproject/deploy/cicd/tekton-parameterized/kustomize/base/myproject-git-repo-route.yaml

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject-git-repo
    name: myproject-git-repo
spec:
    host: myproject.com
    path: /el-myproject-git-repo
    port:
        targetPort: port-8080
    to:
        kind: Service
        name: myproject-git-repo
        weight: 1
status:
    ingress:
        - {}

...
